--- a/Size.html
+++ b/Size.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 </style>
  img {
-    max-width: 100%;
+    width: 100%;;
 }
  <style type="text/css">
 /*! 
