--- a/Size.html
+++ b/Size.html
@@ -26,10 +26,10 @@
 .sc_{-webkit-text-stroke:0px transparent;}
 }
  .y0{bottom:0.000000px;}
- .h0{height:785.280000px;}
- .h1{height:785.500000px;}
- .w0{width:535.920000px;}
- .w1{width:536.000000px;}
+ .h0{height:100%;}
+ .h1{height:100%;}
+ .w0{width:100%;}
+ .w1{width:100%;}
  .x0{left:0.000000px;}
 @media print{
 .y0{bottom:0.000000pt;}
